--- a/MidReport/main.tex
+++ b/MidReport/main.tex
@@ -107,20 +107,20 @@
 % 第一章
 \input{chapters/1_chapter1.tex}
 % 在这里添加第二章、第三章……TeX 文件的引用
-\input{chapters/2_chapter2.tex}
+% \input{chapters/2_chapter2.tex}
 % \input{chapters/3_chapter3.tex}
 
 % 后置部分
 \backmatter
 
 % 结论：在结论相应的 TeX 文件处进行结论部分的撰写
-\input{misc/2_conclusion.tex}
+% \input{misc/2_conclusion.tex}
 % 参考文献：如无特殊需要，参考文献相应的 TeX 文件无需改动，添加参考文献请使用 BibTeX 的格式
 %   添加至 misc/ref.bib 中，并在正文的相应位置使用 \cite{xxx} 的格式引用参考文献
-\input{misc/3_reference.tex}
+% \input{misc/3_reference.tex}
 % 附录：在附录相应的 TeX 文件处进行附录部分的撰写
 \input{misc/4_appendix.tex}
 % 致谢：在致谢相应的 TeX 文件处进行致谢部分的撰写
-\input{misc/5_acknowledgements.tex}
+% \input{misc/5_acknowledgements.tex}
 
 \end{document}
