--- a/FinalThesis/main.tex
+++ b/FinalThesis/main.tex
@@ -113,7 +113,9 @@
 \input{chapters/1_chapter1.tex}
 % 在这里添加第二章、第三章……TeX 文件的引用
 \input{chapters/2_chapter2.tex}
-% \input{chapters/3_chapter3.tex}
+\input{chapters/3_chapter3.tex}
+\input{chapters/4_chapter4.tex}
+\input{chapters/5_chapter5.tex}
 
 % 后置部分
 \backmatter
