--- a/FinalThesis/misc/ref.bib
+++ b/FinalThesis/misc/ref.bib
@@ -20,128 +20,128 @@
 % Compile with: xelatex -> biber -> xelatex -> xelatex
 
 @article{yuFeiJiZongTiDuoXueKeSheJiYouHuaDeXianZhuangYuFaZhanFangXiang2008,
-  title = {飞机总体多学科设计优化的现状与发展方向},
-  author = {余, 雄庆},
-  date = {2008},
+  title        = {飞机总体多学科设计优化的现状与发展方向},
+  author       = {余, 雄庆},
+  date         = {2008},
   journaltitle = {南京航空航天大学学报},
-  pages = {417--426},
-  issn = {1005-2615},
-  url = {http://kns.cnki.net/kcms/detail/detail.aspx?filename=NJHK200804000&dbcode=CJFQ&dbname=CJFD2008&v=},
-  urldate = {2020-02-29},
-  keywords = {aircraft design,multidisciplinary design optimization,optimization,优化,多学科设计优化,飞行器设计},
-  langid = {中文;},
-  number = {04}
+  pages        = {417--426},
+  issn         = {1005-2615},
+  url          = {http://kns.cnki.net/kcms/detail/detail.aspx?filename=NJHK200804000&dbcode=CJFQ&dbname=CJFD2008&v=},
+  urldate      = {2020-02-29},
+  keywords     = {aircraft design,multidisciplinary design optimization,optimization,优化,多学科设计优化,飞行器设计},
+  langid       = {中文;},
+  number       = {04}
 }
 @article{Hajela2012Application,
-  title={Application of global sensitivity equations in multidisciplinary aircraft synthesis},
-  author={Hajela, P. and Bloebaum, C. L. and Sobieszczanski-Sobieski, Jaroslaw},
-  journal={Journal of Aircraft},
-  volume={27},
-  number={12},
-  pages = {1002-110},
-  year={1990},
+  title   = {Application of global sensitivity equations in multidisciplinary aircraft synthesis},
+  author  = {Hajela, P. and Bloebaum, C. L. and Sobieszczanski-Sobieski, Jaroslaw},
+  journal = {Journal of Aircraft},
+  volume  = {27},
+  number  = {12},
+  pages   = {1002-110},
+  year    = {1990}
 }
 @book{李成智2004飞行之梦,
-  title={飞行之梦:航空航天发展史概论},
-  author={李成智 and 李小宁 and 田大山},
-  publisher={北京航空航天大学},
-  location={北京},
-  year={2004},
-  language={zh},
-  keywords={book},
+  title     = {飞行之梦:航空航天发展史概论},
+  author    = {李成智 and 李小宁 and 田大山},
+  publisher = {北京航空航天大学},
+  location  = {北京},
+  year      = {2004},
+  language  = {zh},
+  keywords  = {book}
 }
 @book{Raymer1992Aircraft,
-  title={Aircraft design: A Conceptual Approach},
-  author={Raymer and DanielP},
-  location={Reston, Virginia},
-  publisher={American Institute of Aeronautics and Astronautics},
-  year={1992},
-  keywords={book},
+  title     = {Aircraft design: A Conceptual Approach},
+  author    = {Raymer and DanielP},
+  location  = {Reston, Virginia},
+  publisher = {American Institute of Aeronautics and Astronautics},
+  year      = {1992},
+  keywords  = {book}
 }
 @inproceedings{sunpinyi,
-    author = {孙品一},
-    title = {高校学报编辑工作现代化特征},
-    location = {北京},
-    publisher = {北京师范大学出版社},
-    year = {1998},
-    pages = {10-22},
-    editor = {张为民},
-    booktitle = {中国高等学校自然科学学报研究会. 科技编辑学论文集(2)},
+  author    = {孙品一},
+  title     = {高校学报编辑工作现代化特征},
+  location  = {北京},
+  publisher = {北京师范大学出版社},
+  year      = {1998},
+  pages     = {10-22},
+  editor    = {张为民},
+  booktitle = {中国高等学校自然科学学报研究会. 科技编辑学论文集(2)}
 }
 @inbook{luoyun,
-  title={安全科学理论体系的发展及趋势探讨},
-  author={罗云},
-  location = {北京},
-  publisher={科学出版社},
-  year={2000},
-  pages = {1-5},
-  editor = {白春华 and 何学秋 and 吴宗之},
-  booktitle = {21世纪安全科学与技术的发展趋势},
+  title     = {安全科学理论体系的发展及趋势探讨},
+  author    = {罗云},
+  location  = {北京},
+  publisher = {科学出版社},
+  year      = {2000},
+  pages     = {1-5},
+  editor    = {白春华 and 何学秋 and 吴宗之},
+  booktitle = {21世纪安全科学与技术的发展趋势}
 }
 @phdthesis{zhanghesheng,
-  author = {张和生},
-  title = {嵌入式单片机系统设计},
+  author   = {张和生},
+  title    = {嵌入式单片机系统设计},
   location = {北京},
-  school = {北京理工大学},
-  year = {1998},
-  language={zh},
-  keywords={thesis},
+  school   = {北京理工大学},
+  year     = {1998},
+  language = {zh},
+  keywords = {thesis}
 }
 @phdthesis{Sobieski,
-  author = {Sobieski, I. P.},
-  title = {Multidisciplinary Design Using Collaborative Optimization},
+  author   = {Sobieski, I. P.},
+  title    = {Multidisciplinary Design Using Collaborative Optimization},
   location = {United States -- California},
-  school = {Stanford University},
-  year = {1998},
-  keywords={thesis},
+  school   = {Stanford University},
+  year     = {1998},
+  keywords = {thesis}
 }
 @techreport{fengxiqiao,
-  author = {冯西桥},
-  title = {核反应堆压力容器的LBB分析},
-  address = {北京},
+  author      = {冯西桥},
+  title       = {核反应堆压力容器的LBB分析},
+  address     = {北京},
   institution = {清华大学核能技术设计研究院},
-  year = {1997},
-  language={zh},
-  keywords={techreport},
+  year        = {1997},
+  language    = {zh},
+  keywords    = {techreport}
 }
 @techreport{Sobieszczanski,
-  author = {Sobieszczanski-Sobieski, J.},
-  title = {Optimization by Decomposition: A Step from Hierarchic to Non-Hierarchic Systems},
+  author      = {Sobieszczanski-Sobieski, J.},
+  title       = {Optimization by Decomposition: A Step from Hierarchic to Non-Hierarchic Systems},
   institution = {NASA CP-3031},
-  year = {1989},
-  keywords={techreport},
+  year        = {1989},
+  keywords    = {techreport}
 }
 @patent{jiangxizhou,
-  author = {姜锡洲},
-  title = {一种温热外敷药制备方案},
+  author   = {姜锡洲},
+  title    = {一种温热外敷药制备方案},
   location = {中国},
-  number = {88105607},
-  date = {1989-07-26},
+  number   = {88105607},
+  date     = {1989-07-26}
 }
 @standard{GB/T16159—1996,
-  publisher ={中国标准出版社},
-  title={GB/T 16159—1996. 汉语拼音正词法基本规则},
-  location = {北京},
-  year={1996},
-  language={zh},
-  keywords={standard},
+  publisher = {中国标准出版社},
+  title     = {GB/T 16159—1996. 汉语拼音正词法基本规则},
+  location  = {北京},
+  year      = {1996},
+  language  = {zh},
+  keywords  = {standard}
 }
 @newspaper{xiexide,
-  author = {谢希德},
-  title={创造学习的思路},
-  date={1998-12-25},
-  number = {10},
-  journal = {人民日报},
-  keywords = {newspaper},
+  author   = {谢希德},
+  title    = {创造学习的思路},
+  date     = {1998-12-25},
+  number   = {10},
+  journal  = {人民日报},
+  keywords = {newspaper}
 }
 @online{yaoboyuan,
-  author = {姚伯元},
-  title = {毕业设计(论文)规范化管理与培养学生综合素质},
+  author       = {姚伯元},
+  title        = {毕业设计(论文)规范化管理与培养学生综合素质},
   organization = {中国高等教育网教学研究},
-  date = {2005-02-02},
-  url     = {http://www.cnnic.net.cn/hlwfzyj/hlwxzbg/201201/P020120709345264469680},
-  urldate = {2013-03-26},
-  keywords = {online},
+  date         = {2005-02-02},
+  url          = {http://www.cnnic.net.cn/hlwfzyj/hlwxzbg/201201/P020120709345264469680},
+  urldate      = {2013-03-26},
+  keywords     = {online}
 }
 
 @inproceedings{usageOfBC,
@@ -159,7 +159,7 @@
   organization = {中国金融新闻网},
   date         = {2020-09-10},
   url          = {https://www.financialnews.com.cn/if/if/202009/t20200910_200546.html},
-  urldate      = {2020-09-10},
+  urldate      = {2023-04-24},
   keywords     = {online}
 }
 
@@ -173,4 +173,30 @@
   author    = {Nyothiri Aung and Tahar Kechadi and Tao Zhu and Saber Zerdoumi and Tahar Guerbouz and Sahraoui Dhelim},
   title     = {Blockchain Application on the Internet of Vehicles ({IoV})},
   booktitle = {2022 {IEEE} 7th International Conference on Intelligent Transportation Engineering ({ICITE})}
+}
+
+@online{gongAnBu,
+  author       = {任沁沁},
+  title        = {4.15亿辆、超5亿人！我国发布最新机动车和驾驶人数据},
+  organization = {新华社},
+  date         = {2022-12-08},
+  url          = {http://www.gov.cn/xinwen/2022-12/08/content_5730661.htm},
+  urldate      = {2023-04-24},
+  keywords     = {online}
+}
+
+@online{nickSzabo,
+  author   = {Nick Szabo},
+  title    = {Smart Contracts: Building Blocks for Digital Markets},
+  date     = {1996},
+  url      = {https://www.fon.hum.uva.nl/rob/Courses/InformationInSpeech/CDROM/Literature/LOTwinterschool2006/szabo.best.vwh.net/smart_contracts_2.html},
+  urldate  = {2023-04-24},
+  keywords = {online}
+}
+
+@article{sensors,
+  author  = {Chang Zhou and Huimei Lu and Yong Xiang and J Wu and F Wang},
+  journal = {Sensors [Online]. Available: https://doi. org/10. 3390/s22228885},
+  title   = {{Geohash-Based Rapid Query Method of Regional Transactions in Blockchain for Internet of Vehicles}},
+  year    = {2022}
 }
