--- a/FinalThesis/misc/ref.bib
+++ b/FinalThesis/misc/ref.bib
@@ -167,7 +167,7 @@
   doi       = {10.1109/icite56321.2022.10101404},
   url       = {https://doi.org/10.1109%2Ficite56321.2022.10101404},
   year      = 2022,
-  month     = {nov},
+  month     = 11,
   publisher = {{IEEE}
                },
   author    = {Nyothiri Aung and Tahar Kechadi and Tao Zhu and Saber Zerdoumi and Tahar Guerbouz and Sahraoui Dhelim},
@@ -200,3 +200,109 @@
   title   = {{Geohash-Based Rapid Query Method of Regional Transactions in Blockchain for Internet of Vehicles}},
   year    = {2022}
 }
+
+@online{ethereumWhitePaper,
+  author      = {Vitalik Buterin},
+  title       = {以太坊白皮书},
+  year        = {2014},
+  language    = {zh},
+  keywords    = {online},
+  urldate      = {2023-05-02},
+  url = {https://ethereum.org/zh/whitepaper/}
+}
+
+@online{gethJS,
+  author   = {The go-ethereum Authors},
+  title    = {JavaScript Console},
+  year     = {2023},
+  language = {en},
+  keywords = {online},
+  urldate  = {2023-05-02},
+  url      = {https://geth.ethereum.org/docs/interacting-with-geth/javascript-console}
+}
+
+@article{privateChainConsensus,
+  title        = {基于私有区块链的共识算法性能分析},
+  author       = {庄海燕},
+  date         = {2020},
+  journaltitle = {滨州学院学报},
+  pages        = {63--68},
+  issn         = {1673-2618},
+  url          = {https://kns.cnki.net/kcms2/article/abstract?v=3uoqIhG8C44YLTlOAiTRKibYlV5Vjs7i8oRR1PAr7RxjuAJk4dHXokE42eVQSkXCeR2M6Ex8RJ2bicuBWxu2NYTldLmsdFJ7&uniplatform=NZKPT},
+  urldate      = {2023-05-08},
+  keywords     = {区块链, 私有链, 共识算法, 性能分析},
+  langid       = {中文;},
+  number       = {02}
+}
+
+@online{substrateHome,
+  author   = {Parity Technologies},
+  title    = {Home | Substrate},
+  year     = {2023},
+  language = {en},
+  keywords = {online},
+  urldate  = {2023-05-02},
+  url      = {https://substrate.io/}
+}
+
+@online{substrateDoc,
+  author   = {Parity Technologies},
+  title    = {Substrate Documentation},
+  year     = {2023},
+  language = {en},
+  keywords = {online},
+  urldate  = {2023-05-02},
+  url      = {https://docs.substrate.io/}
+}
+
+@inproceedings{parityVSgeth,
+  author    = {Rouhani, Sara and Deters, Ralph},
+  booktitle = {2017 8th IEEE International Conference on Software Engineering and Service Science (ICSESS)},
+  title     = {Performance analysis of ethereum transactions in private blockchain},
+  year      = {2017},
+  volume    = {},
+  number    = {},
+  pages     = {70-74},
+  doi       = {10.1109/ICSESS.2017.8342866}
+}
+
+@inproceedings{10.1145/3062341.3062363,
+  author    = {Haas, Andreas and Rossberg, Andreas and Schuff, Derek L. and Titzer, Ben L. and Holman, Michael and Gohman, Dan and Wagner, Luke and Zakai, Alon and Bastien, JF},
+  title     = {Bringing the Web up to Speed with WebAssembly},
+  year      = {2017},
+  isbn      = {9781450349888},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  url       = {https://doi.org/10.1145/3062341.3062363},
+  doi       = {10.1145/3062341.3062363},
+  abstract  = {The maturation of the Web platform has given rise to sophisticated and demanding Web applications such as interactive 3D visualization, audio and video software, and games. With that, efficiency and security of code on the Web has become more important than ever. Yet JavaScript as the only built-in language of the Web is not well-equipped to meet these requirements, especially as a compilation target. Engineers from the four major browser vendors have risen to the challenge and collaboratively designed a portable low-level bytecode called WebAssembly. It offers compact representation, efficient validation and compilation, and safe low to no-overhead execution. Rather than committing to a specific programming model, WebAssembly is an abstraction over modern hardware, making it language-, hardware-, and platform-independent, with use cases beyond just the Web. WebAssembly has been designed with a formal semantics from the start. We describe the motivation, design and formal semantics of WebAssembly and provide some preliminary experience with implementations.},
+  booktitle = {Proceedings of the 38th ACM SIGPLAN Conference on Programming Language Design and Implementation},
+  pages     = {185–200},
+  numpages  = {16},
+  keywords  = {assembly languages, just-in-time compilers, programming languages, virtual machines, type systems},
+  location  = {Barcelona, Spain},
+  series    = {PLDI 2017}
+}
+
+@article{wasmIntro,
+  author     = {Haas, Andreas and Rossberg, Andreas and Schuff, Derek L. and Titzer, Ben L. and Holman, Michael and Gohman, Dan and Wagner, Luke and Zakai, Alon and Bastien, JF},
+  title      = {Bringing the Web up to Speed with WebAssembly},
+  year       = {2017},
+  issue_date = {June 2017},
+  publisher  = {Association for Computing Machinery},
+  address    = {New York, NY, USA},
+  volume     = {52},
+  number     = {6},
+  issn       = {0362-1340},
+  url        = {https://doi.org/10.1145/3140587.3062363},
+  doi        = {10.1145/3140587.3062363},
+  abstract   = {The maturation of the Web platform has given rise to sophisticated and demanding Web applications such as interactive 3D visualization, audio and video software, and games. With that, efficiency and security of code on the Web has become more important than ever. Yet JavaScript as the only built-in language of the Web is not well-equipped to meet these requirements, especially as a compilation target. Engineers from the four major browser vendors have risen to the challenge and collaboratively designed a portable low-level bytecode called WebAssembly. It offers compact representation, efficient validation and compilation, and safe low to no-overhead execution. Rather than committing to a specific programming model, WebAssembly is an abstraction over modern hardware, making it language-, hardware-, and platform-independent, with use cases beyond just the Web. WebAssembly has been designed with a formal semantics from the start. We describe the motivation, design and formal semantics of WebAssembly and provide some preliminary experience with implementations.},
+  journal    = {SIGPLAN Not.},
+  month      = {jun},
+  pages      = {185–200},
+  numpages   = {16},
+  keywords   = {programming languages, assembly languages, type systems, virtual machines, just-in-time compilers}
+}
+
+
+
