--- a/FinalThesis/main.tex
+++ b/FinalThesis/main.tex
@@ -65,6 +65,21 @@
 % 然而由于 minted 依赖 Python 的 Pygments 库作为外部依赖，因此出于模板的简洁程度考虑，我们没有提供 minted 进行代码块书写的示例。
 \usepackage{listings}
 
+\lstset{
+  basicstyle          =   \sffamily,          % 基本代码风格
+  keywordstyle        =   \bfseries,          % 关键字风格
+  commentstyle        =   \rmfamily\itshape,  % 注释的风格，斜体
+  stringstyle         =   \ttfamily,  % 字符串风格
+  flexiblecolumns,                % 别问为什么，加上这个
+  numbers             =   left,   % 行号的位置在左边
+  showspaces          =   false,  % 是否显示空格，显示了有点乱，所以不现实了
+  numberstyle         =   \zihao{-5}\ttfamily,    % 行号的样式，小五号，tt等宽字体
+  showstringspaces    =   false,
+  captionpos          =   t,      % 这段代码的名字所呈现的位置，t指的是top上面
+  frame               =   lrtb,   % 显示边框
+  breaklines = true,
+}
+
 \usepackage[
   backend=biber,
   style=gb7714-2015,
