--- a/FinalThesis/misc/4_appendix.tex
+++ b/FinalThesis/misc/4_appendix.tex
@@ -94,19 +94,38 @@
     import matplotlib.pyplot as plt
     from matplotlib.axes._axes import Axes
     from matplotlib.figure import Figure
-    import numpy as np
+    import os
 
     plt.style.use('_mpl-gallery')
 
-    # make data
-    times: list[int] = [1683465655]
-    with open("tx_result_w11.txt", "r", encoding="utf-8") as f:
-        times += [int(each.split('\t')[1]) for each in f.readlines()]
+    dir_prefix: str = input("Directory name: ")
 
+    candidates: list[str] = list()
+    for each in os.listdir():
+        if os.path.isdir(each) and each.startswith(dir_prefix):
+            candidates.append(each)
+
+    if len(candidates) > 1:
+        print("Choose one:")
+        for (i, each) in enumerate(candidates):
+            print(f"({i}) {each}")
+
+        choice: int = int(input("Choice: "))
+        dir_name: str = candidates[choice]
+    else:
+        dir_name: str = candidates[0]
+
+    # make data
+    with open(os.path.join(dir_name, "tx_request_w12.txt"), "r", encoding="utf-8") as f:
+        start_time = int(f.readline().split('\t')[1])
+
+    times: list[int] = [start_time]
+    with open(os.path.join(dir_name, "tx_result_w11.txt"), "r", encoding="utf-8") as f:
+        times += [int(each.split('\t')[1]) for each in f.readlines()]
     times.sort()
 
-    x = range(len(times) - 1)
-    y = [times[i] - times[i - 1] for i in range(1, len(times))]
+    y: list[int] = list(filter(lambda x: x != 0 and x < 55, [times[i] - times[i - 1] for i in range(1, len(times))]))
+    x: range = range(len(y))
 
     # plot
     fig, ax = plt.subplots()
@@ -115,16 +134,21 @@
 
     stem = ax.stem(x, y)
 
-    # ax.set(
-    #     xlim=(0, 8), xticks=np.arange(1, 8),
-    #     ylim=(0, 8), yticks=np.arange(1, 8)
-    # )
-
     for (i, j) in zip(x, y):
-        plt.text(i, j + 0.3, j)
+        plt.text(i, j + 0.3, str(j))
 
-    # ax.bar_label(stem)
+    print(f"total time consume = {times[-1] - times[0]}")
+
+    print(f"fastest = {min(y)}")
+    print(f"variance = {max(y)}")
+
+    average: float = sum(y) / len(y)
+    print(f"average = {average:.04f}")
+
+    variance: float = sum((average - each) ** 2 for each in y) / len(y)
+    print(f"variance = {variance:.04f}")
 
     plt.show()
+
   \end{lstlisting}
 \end{appendices}
