--- a/FinalThesis/misc/ref.bib
+++ b/FinalThesis/misc/ref.bib
@@ -19,6 +19,25 @@
 %
 % Compile with: xelatex -> biber -> xelatex -> xelatex
 
+@inproceedings{usageOfBC,
+  author = {Madhura, K and Mahalakshmi, R},
+  year   = {2022},
+  month  = {01},
+  pages  = {1-10},
+  title  = {Usage of block chain in real estate business for transparency and improved security},
+  doi    = {10.1109/ACCAI53970.2022.9752593}
+}
+
+@online{shuYanSuo,
+  author       = {马梅若},
+  title        = {数研所推出贸易金融区块链平台 提升贸易融资效率 助力经济快速发展},
+  organization = {中国金融新闻网},
+  date         = {2020-09-10},
+  url          = {https://www.financialnews.com.cn/if/if/202009/t20200910_200546.html},
+  urldate      = {2023-04-24},
+  keywords     = {online}
+}
+
 @inproceedings{bcInIoV,
   doi       = {10.1109/icite56321.2022.10101404},
   url       = {https://doi.org/10.1109%2Ficite56321.2022.10101404},
@@ -133,7 +152,7 @@
   doi       = {10.1145/3062341.3062363},
   abstract  = {The maturation of the Web platform has given rise to sophisticated and demanding Web applications such as interactive 3D visualization, audio and video software, and games. With that, efficiency and security of code on the Web has become more important than ever. Yet JavaScript as the only built-in language of the Web is not well-equipped to meet these requirements, especially as a compilation target. Engineers from the four major browser vendors have risen to the challenge and collaboratively designed a portable low-level bytecode called WebAssembly. It offers compact representation, efficient validation and compilation, and safe low to no-overhead execution. Rather than committing to a specific programming model, WebAssembly is an abstraction over modern hardware, making it language-, hardware-, and platform-independent, with use cases beyond just the Web. WebAssembly has been designed with a formal semantics from the start. We describe the motivation, design and formal semantics of WebAssembly and provide some preliminary experience with implementations.},
   booktitle = {Proceedings of the 38th ACM SIGPLAN Conference on Programming Language Design and Implementation},
-  pages     = {185–200},
+  pages     = {185-200},
   numpages  = {16},
   keywords  = {assembly languages, just-in-time compilers, programming languages, virtual machines, type systems},
   location  = {Barcelona, Spain},
@@ -154,8 +173,8 @@
   doi        = {10.1145/3140587.3062363},
   abstract   = {The maturation of the Web platform has given rise to sophisticated and demanding Web applications such as interactive 3D visualization, audio and video software, and games. With that, efficiency and security of code on the Web has become more important than ever. Yet JavaScript as the only built-in language of the Web is not well-equipped to meet these requirements, especially as a compilation target. Engineers from the four major browser vendors have risen to the challenge and collaboratively designed a portable low-level bytecode called WebAssembly. It offers compact representation, efficient validation and compilation, and safe low to no-overhead execution. Rather than committing to a specific programming model, WebAssembly is an abstraction over modern hardware, making it language-, hardware-, and platform-independent, with use cases beyond just the Web. WebAssembly has been designed with a formal semantics from the start. We describe the motivation, design and formal semantics of WebAssembly and provide some preliminary experience with implementations.},
   journal    = {SIGPLAN Not.},
-  month      = {jun},
-  pages      = {185–200},
+  month      = {6},
+  pages      = {185-200},
   numpages   = {16},
   keywords   = {programming languages, assembly languages, type systems, virtual machines, just-in-time compilers}
 }
