完成了四子链章节的编写。现在还差第五章的结构调整，和结论部分。

--- a/FinalThesis/main.tex
+++ b/FinalThesis/main.tex
@@ -60,6 +60,9 @@
   }
 }
 
+\usepackage{tikz}
+\usetikzlibrary{positioning, shapes.geometric}
+
 % 使用 listings 宏包进行代码块使用，并使用了预定义的样式，
 % 你也可以选用自己的喜欢的其他宏包，如 minted；
 % 然而由于 minted 依赖 Python 的 Pygments 库作为外部依赖，因此出于模板的简洁程度考虑，我们没有提供 minted 进行代码块书写的示例。
