结论写好了，但第五章需要大改结构，且完成第五章之后需要相应修改摘要和结论

--- a/FinalThesis/misc/2_conclusion.tex
+++ b/FinalThesis/misc/2_conclusion.tex
@@ -23,6 +23,25 @@
   % 结论部分尽量不使用 \subsection 二级标题，只使用 \section 一级标题
 
   % 这里插入一个参考文献，仅作参考
-  本文结论……。
-\end{conclusion}
+  区块链技术以其透明性、去中心化、不可篡改等特点，在众多领域取得了瞩目的成就。然而，传统区块链的单链结构面对地理信息敏感、区块数量巨大的应用场景，无法提供令人满意的性能表现。针对该问题，实验室提出了树状区块链作为一种可行的解决办法，其采用树状结构组织多条子链，打破了单链结构的桎梏，辅之多种支持快速查询的数据结构，大大增强了区块链技术在上述几种应用场景中的适用性。
 
+  本文以基于区块链的出租车调度系统作为应用背景，针对树状区块链进行了相关调研、测试与部分重写工作。
+
+  首先，在树状区块链的前身——区域索引区块链上，复现了出租车调度系统相关工作，证明了该系统的可用性，同时指出并修复了实验室原有工作的疏漏，最后将以上工作归纳为详尽的手册，为树状区块链上运行出租车调度系统的测试奠定了基础。
+
+  其次，本文介绍了树状区块链的跨子链转账功能，详细解释了提出该功能的动机、该功能的作用和代价，接着设计了不同规模的测试，考察了树状区块链执行跨子链转账功能在不同负载情况下的执行效率，最后对测试结果进行分析、可视化，并建立简单的数学模型，为开发者在不同场景下选择不同区块链实现提供了一些建议。
+
+  在上述工作基础上，本文设计并进行了基于区块链的出租车调度系统在不同结构区块链上运行的对比测试。在确定了测试所使用的数据集、以及测试参与方与链上合约组成的调度系统的交互流程和方法后，进行数据准备并随后开展测试。测试结束后，以乘客端视角和司机端视角，对测试数据进行处理、汇总和可视化，针对树状区块链和区域索引区块链的长处短板进行分析，最后完成了补充实验的设计及进行，证明分析得出的猜想。
+
+  最后，本文介绍了使用Rust重写树状区块链的合理性，并移植了部分树状区块链的特性到基于Rust实现的区块链框架——Substrate中，证明了该重写方案的可行性。通过分析以太坊的一系列不足之处，笔者强调了继续在以太坊平台上进行树状区块链开发的局限性，同时将Substrate区块链开发框架与其对比，介绍其突出优势，阐明了使用Rust重写树状区块链这一迁移方案的合理性。随后，本文对树状区块链当前在Golang上的实现进行了分析，评估了完成该迁移工作的大致工作量及大致工作划分；为证明该移植方案的确实存在可行性，本文选择了账户地理位置信息这一树状区块链特性，添加到Substrate的官方节点模板中，并成功进行了验证性演示。
+
+虽然本文基本完成了有关树状区块链的系统性测试，提出了使用Rust编程语言重写树状区块链的可行方案并进行了部分验证，但笔者认为该项目仍有可拓展的研究内容，例如：
+
+\begin{itemize}
+  \item 第三章中，基于测试结果建立的模型较为简单；在进行动态查询复杂度分析时，仅考察了深度为2的树状区块链网络。若能针对更复杂的网络拓扑结进行分析，构建的数学模型将更能贴近树状区块链在实际场景中的工作情况；
+  \item 第四章中，四条子链并行运行所获得的结果并不理想。虽然笔者提出了测试计算机的性能上限影响了树状区块链的性能发挥的猜想，并设计补充实验加以验证，但若能在性能更好的测试平台上进行该实验，获得的数据才能更有力地证明这一猜想；
+  \item 第五章中，已针对账户地理位置信息完成了一部分树状区块链的特性移植。可以继续进行特性移植，将树状区块链的完整特性移植到Substrate平台，完善该项工作。
+\end{itemize}
+
+  % TODO: 对未来的展望
+\end{conclusion}
