--- a/FinalThesis/misc/ref.bib
+++ b/FinalThesis/misc/ref.bib
@@ -19,6 +19,92 @@
 %
 % Compile with: xelatex -> biber -> xelatex -> xelatex
 
+@article{blockchainTech,
+  title   = {区块链原理及其核心技术},
+  author  = {蔡晓晴 and 邓尧 and 张亮 and 史久深},
+  journal = {计算机学报},
+  volume  = {44},
+  number  = {1},
+  pages   = {84-131},
+  year    = {2021}
+}
+
+@article{bcStudy,
+  title    = {区块链技术及其研究进展},
+  journal  = {工程科学学报},
+  volume   = {41},
+  number   = {190326-0004},
+  pages    = {1361},
+  year     = {2019},
+  author   = {朱岩 and 王巧石 and 秦博涵 and 王中豪},
+}
+
+@article{CAMPANILE2021102511,
+  title    = {Designing a GDPR compliant blockchain-based IoV distributed information tracking system},
+  journal  = {Information Processing & Management},
+  volume   = {58},
+  number   = {3},
+  pages    = {102511},
+  year     = {2021},
+  issn     = {0306-4573},
+  doi      = {https://doi.org/10.1016/j.ipm.2021.102511},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0306457321000194},
+  author   = {Lelio Campanile and Mauro Iacono and Fiammetta Marulli and Michele Mastroianni},
+  keywords = {GDPR, Internet of Vehicles, Blockchain, Risk assessment, DPIA, Privacy by design, Interoperability, EU regulation, Italian regulation},
+}
+
+@article{MA2021102565,
+title = {Security reinforcement for Ethereum virtual machine},
+journal = {Information Processing & Management},
+volume = {58},
+number = {4},
+pages = {102565},
+year = {2021},
+issn = {0306-4573},
+doi = {https://doi.org/10.1016/j.ipm.2021.102565},
+url = {https://www.sciencedirect.com/science/article/pii/S0306457321000674},
+author = {Fuchen Ma and Meng Ren and Ying Fu and Mingzhe Wang and Huizhong Li and Houbing Song and Yu Jiang},
+keywords = {Ethereum virtual machine, Online reinforcement, Vulnerability, Smart contract},
+}
+
+@article{IoV,
+  author     = {Xia, Zhenchang and Wu, Jia and Wu, Libing and Chen, Yanjiao and Yang, Jian and Yu, Philip S.},
+  title      = {A Comprehensive Survey of the Key Technologies and Challenges Surrounding Vehicular Ad Hoc Networks},
+  year       = {2021},
+  issue_date = {August 2021},
+  publisher  = {Association for Computing Machinery},
+  address    = {New York, NY, USA},
+  volume     = {12},
+  number     = {4},
+  issn       = {2157-6904},
+  url        = {https://doi.org/10.1145/3451984},
+  doi        = {10.1145/3451984},
+  journal    = {ACM Trans. Intell. Syst. Technol.},
+  month      = {6},
+  articleno  = {37},
+  numpages   = {30},
+  keywords   = {Vehicular ad hoc networks, machine learning, VANETs, emergency message broadcast, graph neural networks, reinforcement learning, deep learning}
+}
+
+@article{blockchainTechInIoV,
+  title   = {区块链技术在车联网中的应用研究},
+  author  = {杨柳青},
+  journal = {中国新通信},
+  volume  = {20},
+  number  = {6},
+  pages   = {110},
+  year    = {2018}
+}
+
+@online{geohash,
+  author   = {NIEMEYER G},
+  title    = {Geohash tips&tricks},
+  date     = {2013},
+  url      = {http://Geohash.org/site/tips.html},
+  urldate  = {2023-05-17},
+  keywords = {online}
+}
+
 @inproceedings{usageOfBC,
   author = {Madhura, K and Mahalakshmi, R},
   year   = {2022},
@@ -76,6 +162,28 @@
   year    = {2022}
 }
 
+@article{9376868,
+  author  = {Lashkari, Bahareh and Musilek, Petr},
+  journal = {IEEE Access},
+  title   = {A Comprehensive Review of Blockchain Consensus Mechanisms},
+  year    = {2021},
+  volume  = {9},
+  number  = {},
+  pages   = {43620-43652},
+  doi     = {10.1109/ACCESS.2021.3065880}
+}
+
+@article{bcApplication,
+  author  = {孙士奇},
+  journal = {信息系统工程},
+  title   = {区块链技术的发展及应用},
+  year    = {2022},
+  volume = {88},
+  number = {10},
+  year = {2018},
+  pages = {85-86}
+}
+
 @online{ethereumWhitePaper,
   author      = {Vitalik Buterin},
   title       = {以太坊白皮书},
@@ -84,6 +192,44 @@
   keywords    = {online},
   urldate      = {2023-05-02},
   url = {https://ethereum.org/zh/whitepaper/}
+}
+
+@book{whatIsWeb2,
+  title     = {What is Web 2.0?},
+  author    = {Tim O'Reilly},
+  publisher = {O'Reilly Media},
+  location  = {美国},
+  year      = {2009},
+  language  = {en},
+  keywords  = {book}
+}
+
+@article{4755170,
+  author  = {Hendler, Jim},
+  journal = {Computer},
+  title   = {Web 3.0 Emerging},
+  year    = {2009},
+  volume  = {42},
+  number  = {1},
+  pages   = {111-113},
+  doi     = {10.1109/MC.2009.30}
+}
+
+@online{rust,
+  author   = {Rust Teams},
+  title    = {Rust程序设计语言},
+  year     = {2009},
+  language = {zh},
+  keywords = {online},
+  urldate  = {2023-05-18},
+  url      = {https://www.rust-lang.org/zh-CN/}
+}
+
+@phdthesis{borgsmuller2021rust,
+  title  = {The Rust programming language for embedded software development},
+  author = {Borgsm{\"u}ller, Nico},
+  year   = {2021},
+  school = {Technische Hochschule Ingolstadt}
 }
 
 @online{gethJS,
@@ -108,6 +254,16 @@
   keywords     = {区块链, 私有链, 共识算法, 性能分析},
   langid       = {中文;},
   number       = {02}
+}
+
+@online{bitcoin,
+  author   = {Satoshi Nakamoto},
+  title    = {Bitcoin: A Peer-to-Peer Electronic Cash System},
+  year     = {2008},
+  language = {en},
+  keywords = {online},
+  urldate  = {2023-05-02},
+  url      = {https://assets.pubpub.org/d8wct41f/31611263538139.pdf}
 }
 
 @online{substrateHome,
@@ -141,24 +297,6 @@
   doi       = {10.1109/ICSESS.2017.8342866}
 }
 
-@inproceedings{10.1145/3062341.3062363,
-  author    = {Haas, Andreas and Rossberg, Andreas and Schuff, Derek L. and Titzer, Ben L. and Holman, Michael and Gohman, Dan and Wagner, Luke and Zakai, Alon and Bastien, JF},
-  title     = {Bringing the Web up to Speed with WebAssembly},
-  year      = {2017},
-  isbn      = {9781450349888},
-  publisher = {Association for Computing Machinery},
-  address   = {New York, NY, USA},
-  url       = {https://doi.org/10.1145/3062341.3062363},
-  doi       = {10.1145/3062341.3062363},
-  abstract  = {The maturation of the Web platform has given rise to sophisticated and demanding Web applications such as interactive 3D visualization, audio and video software, and games. With that, efficiency and security of code on the Web has become more important than ever. Yet JavaScript as the only built-in language of the Web is not well-equipped to meet these requirements, especially as a compilation target. Engineers from the four major browser vendors have risen to the challenge and collaboratively designed a portable low-level bytecode called WebAssembly. It offers compact representation, efficient validation and compilation, and safe low to no-overhead execution. Rather than committing to a specific programming model, WebAssembly is an abstraction over modern hardware, making it language-, hardware-, and platform-independent, with use cases beyond just the Web. WebAssembly has been designed with a formal semantics from the start. We describe the motivation, design and formal semantics of WebAssembly and provide some preliminary experience with implementations.},
-  booktitle = {Proceedings of the 38th ACM SIGPLAN Conference on Programming Language Design and Implementation},
-  pages     = {185-200},
-  numpages  = {16},
-  keywords  = {assembly languages, just-in-time compilers, programming languages, virtual machines, type systems},
-  location  = {Barcelona, Spain},
-  series    = {PLDI 2017}
-}
-
 @article{wasmIntro,
   author     = {Haas, Andreas and Rossberg, Andreas and Schuff, Derek L. and Titzer, Ben L. and Holman, Michael and Gohman, Dan and Wagner, Luke and Zakai, Alon and Bastien, JF},
   title      = {Bringing the Web up to Speed with WebAssembly},
@@ -171,7 +309,6 @@
   issn       = {0362-1340},
   url        = {https://doi.org/10.1145/3140587.3062363},
   doi        = {10.1145/3140587.3062363},
-  abstract   = {The maturation of the Web platform has given rise to sophisticated and demanding Web applications such as interactive 3D visualization, audio and video software, and games. With that, efficiency and security of code on the Web has become more important than ever. Yet JavaScript as the only built-in language of the Web is not well-equipped to meet these requirements, especially as a compilation target. Engineers from the four major browser vendors have risen to the challenge and collaboratively designed a portable low-level bytecode called WebAssembly. It offers compact representation, efficient validation and compilation, and safe low to no-overhead execution. Rather than committing to a specific programming model, WebAssembly is an abstraction over modern hardware, making it language-, hardware-, and platform-independent, with use cases beyond just the Web. WebAssembly has been designed with a formal semantics from the start. We describe the motivation, design and formal semantics of WebAssembly and provide some preliminary experience with implementations.},
   journal    = {SIGPLAN Not.},
   month      = {6},
   pages      = {185-200},
