--- a/ProposalReport/main.tex
+++ b/ProposalReport/main.tex
@@ -31,11 +31,11 @@
     % date = 2022-08-08
   },
   info = {
-author = 傅泽,
+    author = 傅泽,
     school = 计算机学院,
     major = 计算机科学与技术,
-class = 07111905,
-supervisor = 陆慧梅
+    class = 07111905,
+    supervisor = 陆慧梅
 % externalSupervisor = 向勇
   },
   misc = {
@@ -65,7 +65,7 @@ supervisor = 陆慧梅
 
 % 内容开始
 \section{毕业设计（论文）选题的内容}
-本课题基于实验室工作的基础，研究树状区块链相较传统链式区块链的优劣比较。项目将使用树状区块链构建基于以太坊的区块链网络，部署并运行基于区块链实现的出租车调度智能合约，测试树状区块链相较传统链式区块链的的多种性能指标的变化，并给出进一步优化性能的可行方法；同时，将合约从以太坊迁移至Substrate，探索操作系统编程和区块链技术融合的可行性。
+本课题基于实验室已有工作——基于区块链的出租车调度系统和树状区块链，对树状区块链的性能表现进行综合测试，研究树状区块链相较传统链式区块链的性能比较。课题首先研究树状区块链相较传统单链结构区块链的优势与局限性；其次，对实验室已有工作——基于区块链的出租车调度系统进行复现，验证其可用性；对于树状区块链引入的特色功能——跨子链转账，设计系统的性能测试，并建立简单的数学模型，对开发者在不同应用场景下对树状区块链和传统单链结构区块链的选择提供建议。在上述工作的基础上，以出租车调度系统为背景，测试树状区块链和传统链式区块链在运行该调度系统时的性能表现差异。最后，提出一种使用Rust编程语言重写树状区块链的可行方案，讨论将现有树状区块链的开发平台由以太坊开发平台迁移至更加优秀Substrate开发框架的优势及可行性，并进行部分树状区块链的功能特性的重写工作加以佐证。
 
 \section{研究方案}
 \subsection{本选题的主要任务}
@@ -73,7 +73,7 @@ supervisor = 陆慧梅
   \item 了解传统链式区块链的底层原理、工作机制，了解区块链和车联网技术在国内外发展的近况\cite{blockchainCurrent}\cite{iov}，学习相关法律规定，以可持续发展的角度最大化区块链技术对人类的积极作用；
   \item 在导师指导下，阅读国内外中外文文献，自主学习相关知识，了解在本地网络搭建传统区块链与树状区块链私有链、智能合约的编写与部署等操作的方法。了解出租车调度系统的需求、工作原理，选择适量且适当的评估准则对系统性能表现进行衡量；
   \item 完成传统区块链和树状区块链的搭建，分别于其上完成智能合约的部署和运行测试；此后，根据要求2中选定的性能指标，对其进行性能测试；
-  \item 使用启发式算法，尝试针对数个性能指标，对现有的树状区块链进行改进；
+  \item 学习Substrate区块链开发框架与以太坊开发平台的异同，并尝试利用Substrate对重写树状区块链进行重写工作，为Substrate区块链引入部分树状区块链的功能特性
   \item 完成毕业设计论文一份，开发成果软件一份，软件配套文档一份；
   \item 完成毕业设计英文翻译工作，训练跨文化交流的书面表达能力，为在非母语环境下进行学术相关沟通交流奠定基础；
 \end{enumerate}
@@ -119,7 +119,7 @@ GeoHash 是一种新型的地址编码方式, 由 Gustavo Niemeyer 和 G.M. Mort
 \subsubsection{区块链在不同语言上的实现}
 目前，实验室所使用的搭建私有区块链的工具乃是基于Golang写成的工具Go-Ethereum\cite{about_geth}（下称Geth）。Geth是以太坊官方发布的一组工具，用于开发和接入可在以太坊上运行的千千万万的基于区块链构建的应用程序，有着大量的用户群体和完善的工具链体系。
 
-然而，在一些开源操作系统的数据存储过程上使用区块链以加强数据安全性的尝试并不能完全依赖Geth。得益于Rust编程语言对于内存安全的强有力的保证\cite{system_programming}，绝大多数开源操作系统都正基于这一新兴的语言进行开发。为令操作系统与区块链更好、更深度地融合，基于Rust编写的Substrate横空出世\cite{about_substrate}，其具有灵活小巧的特点，非常适合在Rust环境下进行区块链开发。本课题将尝试将已有的合约从以太坊迁移至Substrate上，与传统区块链、树状区块链一同进行性能测试，论证在操作系统编程中引入区块链技术的可行性。
+然而，在一些开源操作系统的数据存储过程上使用区块链以加强数据安全性的尝试并不能完全依赖Geth。得益于Rust编程语言对于内存安全的强有力的保证\cite{system_programming}，绝大多数开源操作系统都正基于这一新兴的语言进行开发。为令操作系统与区块链更好、更深度地融合，基于Rust编写的Substrate横空出世\cite{about_substrate}，其具有灵活小巧的特点，非常适合在Rust环境下进行区块链开发。本课题将提出一种使用Rust编程语言重写树状区块链的可行方案，讨论将现有树状区块链的开发平台由以太坊开发平台迁移至更加优秀Substrate开发框架的优势及可行性，并进行部分树状区块链的功能特性的重写工作加以佐证。
 
 \subsection{实施技术方案所需的条件}
 
@@ -131,20 +131,20 @@ GeoHash 是一种新型的地址编码方式, 由 Gustavo Niemeyer 和 G.M. Mort
   \label{tab:soft-hardware}
   \begin{tabular}{@{}lcl@{}}
     \toprule
-                              & 指标     & \multicolumn{1}{c}{版本参数} \\
+                          & 指标      & \multicolumn{1}{c}{版本参数}                \\
     \midrule
-    \multirow{2}{*}{硬件环境} & CPU      & Intel i7-9750H               \\
-    \cmidrule(l){2-3}         & RAM      & 24 GB                        \\
+    \multirow{2}{*}{硬件环境} & CPU     & Intel i7-9750H                          \\
+    \cmidrule(l){2-3}     & RAM     & 24 GB                                   \\
     \midrule
-    \multirow{5}{*}{软件环境} & 操作系统 & \begin{tabular}[c]{@{}l@{}}
-      Windows 10 64位专业版 \\  Ubuntu 22.04.1 LTS
-    \end{tabular}    \\
+    \multirow{5}{*}{软件环境} & 操作系统    & \begin{tabular}[c]{@{}l@{}}
+                                        Windows 10 64位专业版 \\  Ubuntu 22.04.1 LTS
+                                      \end{tabular} \\
     \cmidrule(l){2-3}
-                              & Python   & 3.10.6                       \\
+                          & Python  & 3.10.6                                  \\
     \cmidrule(l){2-3}
-                              & Node.JS  & 18.12.1                      \\
+                          & Node.JS & 18.12.1                                 \\
     \cmidrule(l){2-3}
-                              & npm      & 8.19.2                       \\
+                          & npm     & 8.19.2                                  \\
     \bottomrule
   \end{tabular}
 \end{table}
@@ -160,13 +160,15 @@ GeoHash 是一种新型的地址编码方式, 由 Gustavo Niemeyer 和 G.M. Mort
   \label{tab:key-tech}
   \begin{tabular}{@{}lcl@{}}
     \toprule
-    用途                 & 相应技术               \\
+    用途         & 相应技术                  \\
     \midrule
     构建和管理树状区块链 & Geth，Substrate        \\
     \midrule
     自动化管理树状区块链 & TypeScript，JavaScript \\
     \midrule
-    自动化测试和辅助处理 & Python                 \\
+    自动化测试和辅助处理 & Python                \\
+    \midrule
+    构建和编辑Substrate框架 & Rust \\
     \bottomrule
   \end{tabular}
 \end{table}
@@ -174,6 +176,14 @@ GeoHash 是一种新型的地址编码方式, 由 Gustavo Niemeyer 和 G.M. Mort
 
 \subsection{预期能够达到的研究目标}
 本项目旨在选定指标，基于实验室已有的，有关出租车调度的工作，对传统区块链和树状区块链的性能表现进行测试，验证树状区块链在基于geohash进行索引时的理论优越性，以及为实现如此优越性所可能要付出的性能代价。除此以外，本项目还将就数个性能指标进行优化，对目前已有的树状区块链及其有关出租车调度的应用加以改进；并将其从以太坊迁移到Substrate上。
+
+课题预期达到以下目标：
+\begin{itemize}
+  \item 成功复现实验室已有工作——基于区块链的出租车调度系统；
+  \item 对于树状区块链引入的特色功能——跨子链转账，设计系统的性能测试，并建立简单的数学模型，对开发者在不同应用场景下对树状区块链和传统单链结构区块链的选择提供建议;
+  \item 以出租车调度系统为背景，测试树状区块链和传统链式区块链在运行该调度系统时的性能表现差异;
+  \item 提出一种使用Rust编程语言重写树状区块链的可行方案，讨论将现有树状区块链的开发平台由以太坊开发平台迁移至更加优秀Substrate开发框架的优势及可行性，并进行部分树状区块链的功能特性的重写工作加以佐证。
+\end{itemize}
 
 完成毕业设计论文一份，开发成果软件一份，软件配套文档一份，以及毕业设计英文翻译工作。
 
@@ -186,12 +196,12 @@ GeoHash 是一种新型的地址编码方式, 由 Gustavo Niemeyer 和 G.M. Mort
   \label{tab:progress}
   \begin{tabular}{lp{4cm}p{4cm}p{3cm}}
     \toprule
-    阶段 & \multicolumn{1}{c}{任务}                               & \multicolumn{1}{c}{完成标志}                                   & 时间规划  \\ \midrule
-    1    & 了解区块链基本原理和工具的使用                         & 成功搭建本地私有链，并利用RPC进行交互操作                      & 第1-2周   \\ \midrule
-    2    & 了解树状区块链和传统区块链的区别，并学习部署合约的方法 & 基于实验室已有工作成果，在传统和树状区块链上部署智能合约       & 第3-6周   \\ \midrule
-    3    & 挑选性能指标并对两个已搭建的链进行性能测试             & 形成详细测试报告，对比两种链在不同指标上的表现异同             & 第7-10周  \\ \midrule
-    4    & 尝试将在以太坊上部署的合约移植到Substrate上            & 形成报告，并一同参与以太坊上的传统区块链、树状区块链的性能测试 & 第11-14周 \\ \midrule
-    5    & 依照工作进度，形成毕业设计论文，同步进行翻译工作       & 成功完成毕业设计                                               & 第1-14周  \\ \bottomrule
+    阶段 & \multicolumn{1}{c}{任务}      & \multicolumn{1}{c}{完成标志}        & 时间规划    \\ \midrule
+    1  & 了解区块链基本原理和工具的使用             & 成功搭建本地私有链，并利用RPC进行交互操作          & 第1-2周   \\ \midrule
+    2  & 了解树状区块链和传统区块链的区别，并学习部署合约的方法 & 基于实验室已有工作成果，在传统和树状区块链上部署智能合约    & 第3-6周   \\ \midrule
+    3  & 挑选性能指标并对两个已搭建的链进行性能测试       & 形成详细测试报告，对比两种链在不同指标上的表现异同       & 第7-10周  \\ \midrule
+    4  & 尝试将树状区块链的部分功能特性使用Rust重写，并应用到Substrate上  & 对重写的功能特性进行可用性测试，验证工作正确性 & 第11-14周 \\ \midrule
+    5  & 依照工作进度，形成毕业设计论文，同步进行翻译工作    & 成功完成毕业设计                        & 第1-14周  \\ \bottomrule
   \end{tabular}
 \end{table}
 
