论文已根据盲审结果进行修改，PPT正在制作中。同时，增加了一些需要提交的文书材料放在附件...文件夹中。

--- a/FinalThesis/main.tex
+++ b/FinalThesis/main.tex
@@ -25,8 +25,8 @@
 
 % 开启盲审格式 blindPeerReview=true (如：[type=bachelor,blindPeerReview=true])
 
-\documentclass[type=bachelor, blindPeerReview=true]{bithesis}
-% \documentclass[type=bachelor]{bithesis}
+% \documentclass[type=bachelor, blindPeerReview=true]{bithesis}
+\documentclass[type=bachelor]{bithesis}
 
 \BITSetup{
   cover = {
@@ -62,6 +62,7 @@
 }
 
 \usepackage{tikz}
+\usepackage{float}
 \usetikzlibrary{positioning, shapes.geometric}
 
 % 使用 listings 宏包进行代码块使用，并使用了预定义的样式，
