修改了论文的图。做好了PPT。整理了很多答辩需要的材料。

--- a/FinalThesis/main.tex
+++ b/FinalThesis/main.tex
@@ -50,7 +50,7 @@
     studentId = 1120192062,
     supervisor = 陆慧梅,
     keywords = {区块链; 车联网; 测试},
-    keywordsEn = {Blockchain; Internet of Vehicle; Testing},
+    keywordsEn = {Blockchain; Internet of Vehicle; Benchmark},
     % 如果你的毕设为校外毕设，请将下面这一行语句解除注释（删除第一个百分号字符）并填写你的校外毕设导师名字
     % externalSupervisor = 左偏树,
   },
