--- a/FinalThesis/misc/5_acknowledgements.tex
+++ b/FinalThesis/misc/5_acknowledgements.tex
@@ -21,7 +21,13 @@
 
 % 致谢部分尽量不使用 \subsection 二级标题，只使用 \section 一级标题
 \begin{acknowledgements}
-  值此论文完成之际，首先向我的导师……
+  我曾幻想，当我完成毕业设计，心中会作如何感想呢？是完成一项挑战的成就感？抑或是将知识应用于实践的喜悦？然而，放下执笔之手，心中却只有了却一桩大事的释然。回想那遥远的秋天，怀揣好奇与些许不安踏入北京理工大学的校门，拘谨地与未来四年的同窗们打招呼的情形仿佛就在昨日一般。一路走来，虽有新冠疫情侵扰、求学之路上亦非一帆风顺，但我十分庆幸高三并非我知识储备与智力的巅峰。四年求学之路，终有所收获。
 
-  \textcolor{blue}{致谢正文样式与文章正文相同：宋体、小四；行距：22 磅；间距段前段后均为 0 行。阅后删除此段。}
+  我想感谢我的导师陆慧梅老师以及向勇老师。在我迷茫低落之际，陆老师总能以淳淳教诲重新唤起我的信心，坚定我的目标，令我能够走出迷雾，继续前行。在课题方向选择、研究思路方面，向老师给了我相当的支持，并以严格而非严苛的要求因材施教，敦促我在个人能力范围内保质保量地完成毕业设计。
+
+  我想感谢实验室的成佳壮学长、万琦玲学姐、周畅学姐。在有关出租车调度系统和树状区块链的使用、测试、调试等过程中，他们提供了宝贵的帮助。万学姐的复现手册、成学长和周学姐组织的线上研讨会，无不令我在研究课题的过程中减少一份疑惑，增添一份信心。
+
+  感谢我的父母傅盛阳先生和赵晓斐女士，他们在我最迷茫的低谷期毅然决然地选择无条件的理解和包容，为我出谋划策，安定我心。我的毕设能完成至如此程度，离不开他们的大力支持。
+
+  感谢所有老师，和与我一同度过四年美好时光的同学们。有了他们，我的求学之路上，就有了朗朗书声，欢歌笑语相伴。
 \end{acknowledgements}
